--- a/web/mobile/package.json
+++ b/web/mobile/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vant": "^2.0.5",
     "vue": "^2.6.10",
+    "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
