--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.1",
     "@nestjs/swagger": "^4.7.5",
+    "@nestjs/websockets": "^7.6.1",
     "@typegoose/typegoose": "^7.4.5",
     "@types/bcrypt": "^3.0.0",
     "@types/mongoose": "^5.10.2",
@@ -53,6 +55,7 @@
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.12",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
