--- a/web/mobile/package.json
+++ b/web/mobile/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^2.6.5",
+    "hls.js": "^0.14.17",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "vant": "^2.0.5",
     "vue": "^2.6.10",
     "vue-aplayer": "^1.6.1",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-socket.io": "^3.0.10",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
