--- a/web/mobile/package.json
+++ b/web/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.9.7",
     "hls.js": "^0.14.17",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
